fix: category item spacing

--- a/src/components/common/TopBar/topbar.scss
+++ b/src/components/common/TopBar/topbar.scss
@@ -46,7 +46,7 @@
 }
 
 .topbar-category-item {
-  width: fit-content;
+  width: 100%;
   padding: 5px 1px;
   font-family: Roboto, sans-serif;
   font-size: 10px;
@@ -57,10 +57,6 @@
   text-decoration: none;
   letter-spacing: 0;
   border-radius: 0;
-
-  @media screen and (min-width: 640px) {
-    width: 100%;
-  }
 
   @include media(">=notebook") {
     width: fit-content;
